# Autotube

./: .gitignore  .python-version  CHANGELOG_INSTALL_IMPROVEMENTS.md  ENHANCED_GUI_FEATURES.md  FREESOUND_SEARCH_IMPROVEMENTS_SUMMARY.md  FREESOUND_SEARCH_OPTIMIZATION_GUIDE.md  Handover.md  INSTALL.md  INSTALLATION_GUIDE_SUMMARY.md  PYTHON_SETUP_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.launchers.txt  README.md  TODO.md  USER_MANUAL_ENHANCED_GUI.md  activate_env.bat  autotube-cli.bat  autotube-cli.sh  autotube.bat  autotube.sh  autotube.spec  cli.py  demo_content_system.py  demo_openl3.py  demo_seamless_mixing.py  dev_setup.bat  efficient_content_demo.py  install.bat  install.sh  launch_therapeutic_gui.bat  launch_unified_gui.bat  package-lock.json  package.json  pyproject.toml  pytest.ini  python_version_control.py  readme.md  requirements.txt  run_gui.bat  (+23 more)
.clinerules/: Rules.md
.clinerules/workflows/: full-project-review.md  implement-apis.md  implement-gui.md  refine-core.md
.devcontainer/: devcontainer.json  setup.sh
docs/: 2024-RESEARCH-INTEGRATION-COMPLETE.md  GUI-INTEGRATION-COMPLETE.md  buildprocess.md  data-flow-diagram.mermaid  index.md  plan.md  product-description.md
docs/api/: ab_testing.md  core-api-reference.md  mix_creator.md
docs/architecture/: evidence-based-audio-system-design.md  overview.md
docs/development/: 2024-research-integration-readme.md  CONTEXT_AWARE_SEARCH_COMPLETE.md  FREESOUND_SEARCH_ENHANCEMENT_PLAN.md  IMPLEMENTATION_COMPLETE.md  enhanced-implementation-guide-2024.md  implementation-roadmap.md  quick-start-guide.md
docs/examples/: basic-mix-creation.md  user-profile-management.md
docs/guides/: AUDIO_PREVIEW_GUIDE.md  STARTUP_GUIDE.md  UNIFIED_INTERFACE_GUIDE.md  USER_MANUAL_ENHANCED_GUI.md  ab-testing-guide.md  audio-processing-pipeline.md  creating-custom-mixes.md  getting-started.md  visualization-guide.md
docs/research/: scientific-evidence-summary.md
project_name/: __main__.py  cli.py
project_name/api/: freesound_api.py  youtube_uploader.py
project_name/audio_engine/: therapeutic_engine_2024.py
project_name/core/: ab_testing.py  analysis_pipeline.py  audio_metadata.py  audio_similarity.py  content_gatherer.py  deep_learning.py  intelligent_clipper.py  intelligent_mix_creator.py  metadata_generator.py  mix_creator.py  orchestrator.py  processor.py  (+4 more)
scripts/: clean.py  dev.py  generate_research_audio_2024.py  run.py  run_gui_watch.py  test_watch.py
tests/: conftest.py  test_ab_testing.py  test_audio_similarity.py  test_freesound_api.py  test_gui.py  test_metadata_generator.py  test_mix_creator.py  test_orchestrator.py  test_processor.py  test_user_profile.py  test_video_generator.py  test_visualizer.py  test_youtube_uploader.py
(+32 files in other folders)
