[tool.poetry]
name = "project_name"
version = "0.1.0"
description = "A tool for processing and mixing ambient audio for sleep and relaxation."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"
pydub = "^0.25.1"
librosa = "^0.10.0"
scikit-learn = "^1.2.0"
numpy = ">=1.21.0,<1.25.0"
matplotlib = "^3.5.0"
pillow = "^10.0.0"
requests = "^2.28.0"
python-dotenv = "^1.0.0"
pytest = "^7.3.1"
soundfile = "^0.12.1"
tensorflow = ">=2.10.0,<2.16.0"
tensorflow-hub = ">=0.14.0,<0.16.0"
openl3 = "^0.4.2"
click = "^8.0.0"
google-api-python-client = "^2.0.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_name"
version = "0.1.0"
dependencies = [
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    "scikit-learn>=1.2.0",
    "numpy>=1.21.0,<1.25.0",
    "matplotlib>=3.5.0",
    "pillow>=10.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.3.1",
    "tensorflow>=2.10.0,<2.16.0",
    "tensorflow-hub>=0.14.0,<0.16.0",
    "openl3>=0.4.2",
    "soundfile>=0.12.1",
    "click>=8.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0"
]
requires-python = ">=3.11.0,<3.12.0"

[project.scripts]
autotube = "project_name.cli:main"

[tool.ruff]
# Exclude common directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
# Enable flake8-bugbear `B` codes.
# Enable flake8-quotes `Q` codes.
# Enable isort `I` codes.
select = ["E", "F", "B", "Q", "I"]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
